Fix caption align

--- a/themes/simple-hugo-theme/assets/css/style.scss
+++ b/themes/simple-hugo-theme/assets/css/style.scss
@@ -91,6 +91,9 @@ img {
 }
 
 figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   counter-increment: figureIndex;
 
   figcaption::before {
@@ -98,7 +101,6 @@ figure {
   }
   figcaption {
     max-width: 90%;
-    margin: 0 auto;
     margin-top: 20px;
   }
 }
